--- a/config/zones/BA.yaml
+++ b/config/zones/BA.yaml
@@ -5,15 +5,33 @@ bounding_box:
     - 45.2337767604
 capacity:
   coal:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 1876.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 1875.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 1888.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 1883.0
   hydro:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 2170.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 1790.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 1747.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 1708.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2020-01-01'
       source: entsoe.eu
       value: 440.0
   solar:
@@ -21,7 +39,19 @@ capacity:
       source: entsoe.eu
       value: 30.0
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 0.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 51.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 87.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 145.0
+    - datetime: '2022-01-01'
       source: entsoe.eu
       value: 135.0
 contributors:
