--- a/config/zones/FR.yaml
+++ b/config/zones/FR.yaml
@@ -12,76 +12,256 @@ capacity:
       source: rte-france.com
       value: 476.0
   biomass:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 170.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 1840.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 1931.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 2038.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 2039.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 2248.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 2272.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 2371.0
-  coal:
-    - datetime: '2023-01-01'
+    - datetime: '2025-01-01'
       source: entsoe.eu
-      value: 1816.0
-    - datetime: '2024-01-01'
+      value: 2654.0
+  coal:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 2930.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 3972.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 3966.0
+    - datetime: '2020-01-01'
       source: entsoe.eu
       value: 1812.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 1816.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 1813.0
   gas:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 6696.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 11812.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 11952.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 12238.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 12218.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 13074.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 12893.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 13133.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 13113.0
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2022-01-01'
       source: entsoe.eu
       value: 2.0
   hydro:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 18558.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 19800.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 19234.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 20260.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 20285.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 20619.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 20482.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 20385.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 20428.0
   hydro storage:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 4965.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 5020.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 5023.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 5064.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 5050.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 5051.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 5065.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 5543.0
   nuclear:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 63130.0
+    - datetime: '2021-01-01'
       source: entsoe.eu
       value: 61370.0
   oil:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 5300.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 6263.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 3271.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 2874.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 2746.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 2762.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 2566.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 3042.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 3040.0
   solar:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 7660.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 7170.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 8188.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 9438.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 10213.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 13154.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 14639.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 17419.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 21238.0
   unknown:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 302.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 415.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 348.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 1316.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 1366.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 1400.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 1388.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 1275.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 371.0
   wind:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 13569.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 12518.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 13610.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 16592.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 17227.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 19536.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 21336.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 23617.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 24606.0
 contributors:
   - corradio
   - lorrieq
