--- a/config/zones/HR.yaml
+++ b/config/zones/HR.yaml
@@ -5,57 +5,180 @@ bounding_box:
     - 46.5037509222
 capacity:
   biomass:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 42.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 58.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 77.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 97.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 114.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 117.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 120.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 122.0
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 325.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 332.0
+    - datetime: '2021-01-01'
       source: entsoe.eu
       value: 217.0
   gas:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 743.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 750.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 766.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 886.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 798.0
   geothermal:
-    - datetime: '2023-01-01'
+    - datetime: '2019-01-01'
       source: entsoe.eu
       value: 10.0
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 1809.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 1857.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 1865.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 1872.0
+    - datetime: '2022-01-01'
       source: entsoe.eu
       value: 1874.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
       source: entsoe.eu
       value: 281.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 283.0
   oil:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 950.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 937.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 77.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 75.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 45.0
   solar:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 51.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 52.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 53.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 85.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 96.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 140.0
     - datetime: '2024-01-01'
       source: entsoe.eu
-      value: 190.0
+      value: 292.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 450.0
   unknown:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 39.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 46.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 49.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 50.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 54.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 57.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 83.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 95.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 115.0
   wind:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 537.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 582.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 616.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 739.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 796.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 925.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 981.0
     - datetime: '2024-01-01'
       source: entsoe.eu
-      value: 1137.0
+      value: 1209.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 1240.0
 contributors:
   - PaulCornelissen
   - VIKTORVAV99
