--- a/config/zones/ME.yaml
+++ b/config/zones/ME.yaml
@@ -5,15 +5,24 @@ bounding_box:
     - 43.52384
 capacity:
   coal:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
       source: entsoe.eu
       value: 210.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 420.0
   hydro:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 662.0
+    - datetime: '2019-01-01'
       source: entsoe.eu
       value: 649.0
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 72.0
+    - datetime: '2019-01-01'
       source: entsoe.eu
       value: 118.0
 contributors:
