--- a/config/zones/NO-NO3.yaml
+++ b/config/zones/NO-NO3.yaml
@@ -5,28 +5,77 @@ bounding_box:
     - 65.490423895
 capacity:
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: entsoe.eu
       value: 4.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 19.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 20.0
+  gas:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 0.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 180.0
   hydro:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 4003.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 4475.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 4571.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 4700.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 4851.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 4854.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 4815.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 4922.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 53.0
+    - datetime: '2018-01-01'
       source: entsoe.eu
       value: 60.0
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 0.0
+    - datetime: '2021-01-01'
       source: entsoe.eu
       value: 53.0
   wind:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 356.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 320.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 509.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 1902.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 2126.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 2120.0
