--- a/config/zones/NO-NO5.yaml
+++ b/config/zones/NO-NO5.yaml
@@ -5,24 +5,65 @@ bounding_box:
     - 62.338893003403086
 capacity:
   biomass:
-    - datetime: '2023-01-01'
+    - datetime: '2021-01-01'
       source: entsoe.eu
       value: 32.0
   gas:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 336.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 359.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 367.0
+    - datetime: '2021-01-01'
       source: entsoe.eu
       value: 192.0
   hydro:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 7277.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 7578.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 7633.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 7810.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 7905.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 7926.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 7946.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 7996.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 469.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 449.0
+    - datetime: '2021-01-01'
       source: entsoe.eu
       value: 483.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 0.0
+  wind:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 0.0
 country: 'NO'
 delays:
   production: 7
