--- a/config/zones/RS.yaml
+++ b/config/zones/RS.yaml
@@ -5,49 +5,157 @@ bounding_box:
     - 46.1717298447
 capacity:
   biomass:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 6.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 8.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 2.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 34.0
   coal:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 5644.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 5668.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 5601.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 5283.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 5661.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 6011.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 6121.0
   gas:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 3.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 286.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 297.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 486.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 608.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 607.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 609.0
   hydro:
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 2364.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 2407.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 2327.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 2477.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 2509.0
+    - datetime: '2022-01-01'
+      source: entsoe.eu
+      value: 2524.0
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 2536.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 2537.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 3153.0
   hydro storage:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
       source: entsoe.eu
       value: 642.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 639.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 28.0
   solar:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 4.0
+    - datetime: '2021-01-01'
       source: entsoe.eu
       value: 3.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 29.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 73.0
   unknown:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 428.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 426.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 23.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 25.0
+    - datetime: '2022-01-01'
       source: entsoe.eu
       value: 35.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 33.0
   wind:
-    - datetime: '2023-01-01'
+    - datetime: '2017-01-01'
+      source: entsoe.eu
+      value: 17.0
+    - datetime: '2018-01-01'
+      source: entsoe.eu
+      value: 25.0
+    - datetime: '2019-01-01'
+      source: entsoe.eu
+      value: 398.0
+    - datetime: '2020-01-01'
+      source: entsoe.eu
+      value: 397.0
+    - datetime: '2021-01-01'
+      source: entsoe.eu
+      value: 429.0
+    - datetime: '2022-01-01'
       source: entsoe.eu
       value: 533.0
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 646.0
+    - datetime: '2025-01-01'
+      source: entsoe.eu
+      value: 740.0
 contributors:
   - corradio
   - nessie2013
